--- a/public/error-404.html
+++ b/public/error-404.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="color-scheme" content="light dark">
-  <title>404 | Quotes :)</title>
+  <title>404 | Citaat-straat :D</title>
+  <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
-  <p>Page not found.</p>
+  <main>
+    <h1>Niet gevonden</h1>
+    <p>Er is verder ook niet heel veel op deze website te vinden...</p>
+    <a href="/">Terug naar de homepagina</a>
+  </main>
 </body>
 
 </html>
