--- a/public/error-xxx.html
+++ b/public/error-xxx.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="color-scheme" content="light dark">
-  <title>??? | Quotes :)</title>
+  <title>??? | Citaat-straat :D</title>
+  <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
-  <p>????? lol ???</p>
+  <main>
+    <h1>????? lol ???</h1>
+    <p>Als je hier terecht bent gekomen krijg je een koekje van me.</p>
+    <a href="/">Terug naar de homepagina</a>
+  </main>
 </body>
 
 </html>
